fixed nav bar overlap bug

--- a/styles/navBar.sass
+++ b/styles/navBar.sass
@@ -5,6 +5,7 @@ nav
     background-color: variables.$temp_bg
     box-shadow: 5px 10px 10px #a8a5a5
     position: sticky
+    z-index: 1000
     top: 0.5px
 #searchBar
     margin-top: 10%
